--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,14 @@
 {
 	"name": "server",
 	"version": "1.0.0",
-	"description": "",
+	"description": "Socket IO server for the chat application",
 	"main": "index.js",
 	"scripts": {
 		"dev": "ts-node-dev --respawn --transpile-only index.ts"
 	},
+	"private": "true",
 	"keywords": [],
-	"author": "",
-	"license": "ISC",
+	"author": "Binit Rupakheti",
 	"dependencies": {
 		"cors": "^2.8.5",
 		"express": "^4.18.2",
